The default html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,12 @@
   <title>{{ site.name }}{% if page.title %} - {{ page.title }}{% endif %}</title>
   <link rel="shortcut icon" href="{{ "/" | relative_url  }}assets/images/favicon.ico">
   <link rel="stylesheet" href="{{ "/" | relative_url  }}assets/css/style.css">
-  <link rel="alternate" type="application/rss+xml" title="My Blog" href="{{ "/" | relative_url  }}feed.xml">
+  <link rel="alternate" type="application/rss+xml" title="EJP-RD Catalog" href="{{ "/" | relative_url  }}feed.xml">
   <link rel="stylesheet" href="{{ "/" | relative_url  }}assets/css/highlight.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/highlight.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/highlight.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/fontawesome.
+  min.css">
 </head>
 <body>
 
@@ -39,6 +43,3 @@
   </script>
 </body>
 </html>
-
-
-
